--- a/tools/packages.config
+++ b/tools/packages.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
 	<package id="Cake" version="0.8.0" />
-	<package id="GitVersion.CommandLine" version="3.4.1" targetFramework="net452" /
+	<package id="GitVersion.CommandLine" version="3.4.1" targetFramework="net452" />
 </packages>
